--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,14 @@ cmake_minimum_required(VERSION 3.17 FATAL_ERROR)
 
 project(network-monitor)
 
+# Dependencies
+# If dependencies are managed with conan, we set the CMake module path (where
+# CMake looks for dependencies) to the current build folder.
+if(EXISTS ${CMAKE_CURRENT_BINARY_DIR}/conaninfo.txt)
+    set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_BINARY_DIR})
+endif()
+
+
 set(network-monitor_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp")
 
 add_executable(network-monitor ${network-monitor_SOURCES})
