--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,15 @@ endif()
 find_package(Boost 1.75 REQUIRED COMPONENTS system)
 
 
-set(network-monitor_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp")
+set(network-monitor_SOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
+set(network-monitor_SOURCES "${network-monitor_SOURCES_DIR}/main.cpp")
 
 add_executable(network-monitor ${network-monitor_SOURCES})
-target_compile_definitions(network-monitor PRIVATE _WIN32_WINNT=0x0A00)
-target_compile_features(network-monitor PRIVATE cxx_std_11)
-target_link_libraries(network-monitor PRIVATE Boost::Boost)
+target_compile_definitions(network-monitor PRIVATE
+    # Boost.Asio
+    _WIN32_WINNT=0x0A00
+    # Boost.Beast
+    BOOST_BEAST_USE_STD_STRING_VIEW=1
+)
+target_compile_features(network-monitor PRIVATE cxx_std_17)
+target_link_libraries(network-monitor PRIVATE Boost::system)
