Split the code into a static library and a test executable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,21 +12,29 @@ endif()
 
 find_package(Boost 1.75 REQUIRED COMPONENTS system)
 
-
+# network-monitor LIB
 set(network-monitor_SOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 set(network-monitor_SOURCES
-    ${network-monitor_SOURCES_DIR}/main.cpp
     ${network-monitor_SOURCES_DIR}/websocket-client.cpp
 )
-set(network-monitor_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
+set(network-monitor_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
-add_executable(network-monitor ${network-monitor_SOURCES})
-target_include_directories(network-monitor PRIVATE ${network-monitor_INCLUDE_DIR})
-target_link_libraries(network-monitor PRIVATE Boost::system)
-target_compile_definitions(network-monitor PRIVATE
+add_library(network-monitor STATIC ${network-monitor_SOURCES})
+target_include_directories(network-monitor PUBLIC ${network-monitor_INCLUDE_DIR})
+target_link_libraries(network-monitor PUBLIC Boost::system)
+target_compile_features(network-monitor PUBLIC cxx_std_17)
+target_compile_definitions(network-monitor PUBLIC
     # Boost.Asio
     _WIN32_WINNT=0x0A00
     # Boost.Beast
     BOOST_BEAST_USE_STD_STRING_VIEW=1
 )
-target_compile_features(network-monitor PRIVATE cxx_std_17)
+
+# network-monitor TESTS
+set(network-monitor-tests_SOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/tests")
+set(network-monitor-tests_SOURCES
+    ${network-monitor-tests_SOURCES_DIR}/test-websocket-client.cpp
+)
+
+add_executable(network-monitor-tests ${network-monitor-tests_SOURCES})
+target_link_libraries(network-monitor-tests PRIVATE network-monitor)
