--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.17 FATAL_ERROR)
 
-project(network-monitor)
+project(network-monitor CXX)
 
 # Dependencies
 # If dependencies are managed with conan, we set the CMake module path (where
@@ -10,16 +10,22 @@ if(EXISTS ${CMAKE_CURRENT_BINARY_DIR}/conaninfo.txt)
 endif()
 
 
-find_package(Boost 1.75 REQUIRED COMPONENTS system)
+find_package(Boost 1.75 REQUIRED COMPONENTS system unit_test_framework)
 
-# network-monitor LIB
-set(network-monitor_SOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
-set(network-monitor_SOURCES
-    ${network-monitor_SOURCES_DIR}/websocket-client.cpp
+
+# ----------- network-monitor LIB -----------
+set(network-monitor_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
+set(network-monitor_SRC
+    ${network-monitor_SRC_DIR}/websocket-client.cpp
 )
-set(network-monitor_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
-add_library(network-monitor STATIC ${network-monitor_SOURCES})
+set(network-monitor_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
+set(network-monitor_HEADERS_DIR "${network-monitor_INCLUDE_DIR}/network-monitor")
+set(network-monitor_HEADERS
+    ${network-monitor_HEADERS_DIR}/websocket-client.hpp
+)
+
+add_library(network-monitor STATIC ${network-monitor_SRC} ${network-monitor_HEADERS})
 target_include_directories(network-monitor PUBLIC ${network-monitor_INCLUDE_DIR})
 target_link_libraries(network-monitor PUBLIC Boost::system)
 target_compile_features(network-monitor PUBLIC cxx_std_17)
@@ -30,11 +36,30 @@ target_compile_definitions(network-monitor PUBLIC
     BOOST_BEAST_USE_STD_STRING_VIEW=1
 )
 
-# network-monitor TESTS
-set(network-monitor-tests_SOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/tests")
-set(network-monitor-tests_SOURCES
-    ${network-monitor-tests_SOURCES_DIR}/test-websocket-client.cpp
-)
 
-add_executable(network-monitor-tests ${network-monitor-tests_SOURCES})
-target_link_libraries(network-monitor-tests PRIVATE network-monitor)
+# ----------- network-monitor TESTS -----------
+# NOTE: I feel like this is still wrong, at least I should move this to tests/CMakeLists.txt
+# https://cliutils.gitlab.io/modern-cmake/chapters/testing.html
+if(${CMAKE_PROJECT_NAME} STREQUAL ${PROJECT_NAME})
+    include(CTest)
+
+    #if(${BUILD_TESTING})
+        #add_subdirectory(tests)
+    set(network-monitor-tests_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/tests")
+    set(network-monitor-tests_SRC
+        ${network-monitor-tests_SRC_DIR}/main.cpp
+        ${network-monitor-tests_SRC_DIR}/test-websocket-client.cpp
+    )
+    
+    add_executable(network-monitor-tests ${network-monitor-tests_SRC})
+    target_link_libraries(network-monitor-tests
+    PRIVATE network-monitor
+    Boost::unit_test_framework
+    )
+    
+    add_test(
+        NAME network-monitor-tests
+        COMMAND $<TARGET_FILE:network-monitor-tests>
+    )
+    #endif()
+endif()
